[EGD-3359] Special characters and emoji window (working, but not pretty enough)

--- a/image/assets/lang/lang_en.json
+++ b/image/assets/lang/lang_en.json
@@ -21,15 +21,16 @@
     "common_information": "Information",
     "common_check": "CHECK",
     "common_uncheck": "UNCHECK",
+    "common_emoji": "EMOJI",
+    "common_special_characters": "SPECIAL",
 
-    "common_mo":"MO",
-    "common_tu":"TU",
-    "common_we":"WE",
-    "common_th":"TH",
-    "common_fr":"FR",
-    "common_sa":"SA",
-    "common_su":"SU",
-
+    "common_mo": "MO",
+    "common_tu": "TU",
+    "common_we": "WE",
+    "common_th": "TH",
+    "common_fr": "FR",
+    "common_sa": "SA",
+    "common_su": "SU",
     "common_monday": "Monday",
     "common_tuesday": "Tuesday",
     "common_wednesday": "Wednesday",
@@ -268,22 +269,25 @@
     "app_music_player_quit": "QUIT",
     "app_music_player_music_empty_window_notification": "Press Music Library to choose\n a song from the library",
 
-    "sms_add_rec_num" : "Add recipient or type a number",
+    "app_special_input_window": "Special characters",
+    "app_emoji_input_window": "Emoji",
+
+    "sms_add_rec_num": "Add recipient or type a number",
     "sms_title_message": "New message",
-    "sms_call_text"  : "Call ",
-    "sms_resend_failed" : "Send again",
-    "sms_delete_conversation" : "Delete conversation",
-    "sms_forward_message" : "Forward message",
-    "sms_copy" : "Copy",
-    "sms_delete_message" : "Delete",
-    "sms_from_this_sms" : "From this message",
+    "sms_call_text": "Call ",
+    "sms_resend_failed": "Send again",
+    "sms_delete_conversation": "Delete conversation",
+    "sms_forward_message": "Forward message",
+    "sms_copy": "Copy",
+    "sms_delete_message": "Delete",
+    "sms_from_this_sms": "From this message",
     "sms_use_template" : "Use Template",
     "sms_paste" : "Paste",
-    "sms_reply" : "REPLY",
-    "sms_temp_reply" : "Reply",
-    "sms_mark_read" : "Mark as read",
-    "sms_mark_unread" : "Mark as unread",
-    
+    "sms_reply": "REPLY",
+    "sms_temp_reply": "Reply",
+    "sms_mark_read": "Mark as read",
+    "sms_mark_unread": "Mark as unread",
+
     "settings_lang_PL": "PL",
     "settings_lang_ENG": "ENG",
     "settings_lang_DE": "DE",
