--- a/image/assets/lang/lang_en.json
+++ b/image/assets/lang/lang_en.json
@@ -249,6 +249,10 @@
     "app_settings_language_polish": "Polish",
     "app_settings_language_german": "German",
     "app_settings_language_spanish": "Spanish",
+    "app_settings_network_active_card": "Active card",
+    "app_settings_network_operator_auto_select": "Operator auto-select",
+    "app_settings_network_all_operators": "  All Operators",
+    "app_settings_network_import_contacts_from_sim_card": "Import contacts from SIM card",
 
     "app_phonebook_title_main": "Contacts",
     "app_phonebook_search_win_contacts": "Contacts",
