[EGD-3995] add sim setup window

--- a/image/assets/lang/lang_en.json
+++ b/image/assets/lang/lang_en.json
@@ -253,8 +253,10 @@
     "app_settings_network_operator_auto_select": "Operator auto-select",
     "app_settings_network_all_operators": "All Operators",
     "app_settings_network_import_contacts_from_sim_card": "Import contacts from SIM card",
-    "app_settings_network_sim1": "Sim1",
-    "app_settings_network_sim2": "Sim2",
+    "app_settings_network_sim1": "SIM1",
+    "app_settings_network_sim2": "SIM2",
+    "app_settings_sim_setup": "$SIM_CARD$ setup",
+    "app_settings_enter_pin_setup_to_sim": "Enter the PIN code to set up\nthe $SIM_CARD$ card:",
 
     "app_phonebook_title_main": "Contacts",
     "app_phonebook_search_win_contacts": "Contacts",
